--- a/캐글뽀개기_Intermediate_Level_011223_V6ipynb.ipynb
+++ b/캐글뽀개기_Intermediate_Level_011223_V6ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAOXb61VJlWpOlK+AvHafw",
+      "authorship_tag": "ABX9TyMYQAzgrB8lOL3sum0zsRDk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,44 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#요약\n",
+        "이 노트북은 캐글뽀개기(2021)의 137-158의 내용을 학습한 주피터 노트북입니다.\n",
+        "\n",
+        "#공부시간\n",
+        "캐글뽀개기\n",
+        "Scheduled: Jan 8, 2023 5:45 PM to 6:45 PM, GMT+9\n",
+        "\n",
+        "캐글뽀개기\n",
+        "Scheduled: Jan 10, 2023 1:10 PM to 1:30 PM, GMT+9\n",
+        "\n",
+        "캐글뽀개기\n",
+        "Scheduled: Jan 10, 2023 9:30 PM to 11:00 PM, GMT+9\n",
+        "\n",
+        "캐글뽀개기\n",
+        "Scheduled: Jan 11, 2023 8:00 AM to 9:00 AM, GMT+9\n",
+        "\n",
+        "캐글뽀개기\n",
+        "Scheduled: Jan 12, 2023 8:00 AM to 9:00 AM, GMT+9\n",
+        "\n",
+        "캐글뽀개기\n",
+        "Scheduled: Jan 12, 2023 9:30 PM to 10:30 PM, GMT+9\n",
+        "\n",
+        "캐글뽀개기\n",
+        "Scheduled: Jan 12, 2023 10:30 PM to 10:50 PM, GMT+9\n",
+        "\n",
+        "\n",
+        "# 한줄평\n",
+        "  어떤 기술을 더 배워야할지 그리고 어떻게 하면 지속적으로 할수있을지 좋은 가이드같은 공부였다."
+      ],
+      "metadata": {
+        "id": "WNueBRgXO0zO"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,7 +100,7 @@
       "metadata": {
         "id": "Wbz2NP-QwdRH"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +145,7 @@
       "metadata": {
         "id": "e2sW5OLUxT6I"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +203,7 @@
       "metadata": {
         "id": "SzfDs8fojmZU"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +233,7 @@
         "id": "bpsR49clI9oP",
         "outputId": "cab0b433-c832-4320-bf8c-c0c20b173e45"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +267,7 @@
       "metadata": {
         "id": "lv_ejJ36mNvt"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +287,7 @@
         "id": "enMFOz5Pm0Ov",
         "outputId": "dbfeeb07-f7d1-4029-c07f-07ba14fd3cab"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +316,7 @@
         "id": "JjwB4iGwnTBz",
         "outputId": "4cf8dc83-cdb5-45d8-e055-9db2813a5ea4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -319,7 +355,7 @@
         "id": "z2ZyRU_Jni4t",
         "outputId": "a40aa230-824e-4085-9c1a-ff25813556d5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -358,7 +394,7 @@
         "id": "IByRDuoLM3ep",
         "outputId": "38118db7-bdf1-4119-af84-8e1387682cb5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -400,7 +436,7 @@
         "id": "dGhTgTuIotG9",
         "outputId": "8d89c5f4-bc7a-45ba-daa0-f062c357fd4b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -437,7 +473,7 @@
         "id": "Aa09LRzypy-X",
         "outputId": "a909a3f9-6d22-4512-e5e1-c545709e7a4f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -469,7 +505,7 @@
         "id": "OkGX1G9ePoCz",
         "outputId": "e56f06e0-174c-4e01-a2f5-0c4e5a3ecb16"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,7 +552,7 @@
         "id": "RMP6eEjRqbis",
         "outputId": "4a80a925-5c62-406a-afff-c16362855b4c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,7 +618,7 @@
         "id": "JsGgz4I6rvN9",
         "outputId": "38c20e12-c8aa-4919-91f8-80d640e296f8"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,7 +714,7 @@
         "id": "1TmInxVdtWuv",
         "outputId": "1cdf91a4-f950-4e44-b51d-167be0f5bb03"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
